--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,11 @@
 html,
 body {
   height: 100%;
+  margin: 0;
 }
 
 body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  background-color: black;
 }
